# mpp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  perfTest.cpp
src/backends/: CMakeLists.txt
src/backends/cuda/: CMakeLists.txt  cudaException.cpp  cudaException.h  devVar.h  devVarView.h  dllexport_cudacore.h  event.cpp  event.h  stream.cpp  stream.h  streamCtx.cpp  streamCtx.h  templateRegistry.h
src/backends/cuda/image/: CMakeLists.txt  SSIMFilterKernel.h  addKernel.cu  addKernel.h  bilateralGaussFilterKernel.h  boxAndBoxSquareKernel.h  cannyEdgeHysteresisKernel.h  cannyEdgeMaxSupressionKernel.h  columnCoefficientFilterKernel.h  columnWindowSumKernel.h  configurations.h  crossCorrelationCoefficientKernel.h  (+99 more)
src/backends/npp/: CMakeLists.txt  dllexport_npp.h  nppException.cpp  nppException.h
src/backends/simple_cpu/: CMakeLists.txt  dllexport_simplecpu.h  operator_random.h
src/c-api/cuda/: CMakeLists.txt  catch_and_return.h  convertScale_16bf.cpp  convertScale_16bf.h  convertScale_16f.cpp  convertScale_16f.h  convertScale_16s.cpp  convertScale_16s.h  convertScale_16sc.cpp  convertScale_16sc.h  convertScale_16u.cpp  convertScale_16u.h  convertScale_32f.cpp  convertScale_32f.h  convertScale_32fc.cpp  convertScale_32fc.h  convertScale_32s.cpp  convertScale_32s.h  convertScale_32sc.cpp  convertScale_32sc.h  convertScale_32u.cpp  convertScale_32u.h  convertScale_64f.cpp  convertScale_64f.h  convertScale_8s.cpp  convertScale_8s.h  convertScale_8u.cpp  convertScale_8u.h  copySwapChannelDup_16bf.cpp  copySwapChannelDup_16bf.h  copySwapChannelDup_16f.cpp  copySwapChannelDup_16f.h  copySwapChannelDup_16s.cpp  copySwapChannelDup_16s.h  copySwapChannelDup_16sc.cpp  copySwapChannelDup_16sc.h  copySwapChannelDup_16u.cpp  copySwapChannelDup_16u.h  copySwapChannelDup_32f.cpp  copySwapChannelDup_32f.h  (+44 more)
src/common/: CMakeLists.txt  bfloat16.cpp  bfloat16.h  bfloat16_impl.h  complex.cpp  complex.h  complex_impl.h  complex_typetraits.h  defines.h  disableWarningsBegin.h  disableWarningsEnd.h  dllexport_common.h  errorMessageSingleton.cpp  errorMessageSingleton.h  exception.cpp  exception.h  half_fp16.cpp  half_fp16.h  half_fp16_impl.h  limits.h  maskTupel.h  moduleEnabler.h  mpp_defs.h  needSaturationClamp.h  numberTypes.h  numeric_limits.h  opp_defs.h  roundFunctor.h  safeCast.h  scratchBuffer.h  scratchBufferException.cpp  scratchBufferException.h  staticCast.h  tupel.h  utilities.h  vector1.cpp  vector1.h  vector1_impl.h  vector2.cpp  vector2.h  (+15 more)
src/common/arithmetic/: binary_operators.h  ternary_operators.h  unary_operators.h
src/common/colorConversion/: colorMatrices.h  color_operators.h
src/common/dataExchangeAndInit/: operators.h
src/common/fileIO/: CMakeLists.txt  dllexport_fileio.h  file.cpp  file.h  fileIOException.cpp  fileIOException.h  fileReader.cpp  fileReader.h  fileWriter.cpp  fileWriter.h  lzwCompression.cpp  lzwCompression.h  pseudoFileReader.cpp  pseudoFileReader.h  zlibCompression.cpp  zlibCompression.h
src/common/filtering/: postOperators.h
src/common/image/: CMakeLists.txt  affineTransformation.cpp  affineTransformation.h  affineTransformationException.cpp  affineTransformationException.h  border.cpp  border.h  bound.h  channel.h  channelException.cpp  channelException.h  channelList.h  filterArea.h  filterAreaException.cpp  filterAreaException.h  fixedSizeFilters.h  gotoPtr.h  imageViewBase.h  matrix.cpp  matrix.h  matrix3x4.cpp  matrix3x4.h  matrix4x4.cpp  matrix4x4.h  matrixException.cpp  matrixException.h  pitchException.cpp  pitchException.h  pixelTypeEnabler.h  pixelTypes.cpp  pixelTypes.h  quad.h  roi.cpp  roi.h  roiException.cpp  roiException.h  size2D.cpp  size2D.h  sizePitched.cpp  sizePitched.h  (+4 more)
src/common/morphology/: operators.h  postOperators.h
src/common/signal/: CMakeLists.txt
src/common/statistics/: indexMinMax.h  minMaxIndex.h  operators.h  postOperators.h
src/utilities/: CMakeLists.txt
src/utilities/nppCodeGenerator/: CMakeLists.txt  convertedArgument.cpp  convertedArgument.h  convertedFunction.cpp  convertedFunction.h  headerTemplates.h  main.cpp  process8uC1.cpp
src/utilities/nppFunctionLister/: CMakeLists.txt  main.cpp
src/utilities/nppParser/: CMakeLists.txt  function.h  main.cpp  nppParser.cpp  nppParser.h
src/utilities/perfTest/: CMakeLists.txt  arithmetic.h  filtering.h  geometricTransforms.h  perfTest.cpp  pixel16uC1.cpp  pixel16uC1.h  pixel16uC3.cpp  pixel16uC3.h  pixel16uC4.cpp  pixel16uC4.h  pixel32fC1.cpp  pixel32fC1.h  pixel32fC3.cpp  pixel32fC3.h  pixel32fC4.cpp  pixel32fC4.h  pixel32sC1.cpp  pixel32sC1.h  pixel8uC1.cpp  pixel8uC1.h  pixel8uC3.cpp  pixel8uC3.h  pixel8uC4.cpp  pixel8uC4.h  runtime.cpp  runtime.h  statistics.h  testBase.cpp  testBase.h  testMppBase.h  testNppBase.h  testOppBase.h
test/: CMakeLists.txt
test/catch2/: Doxyfile
test/catch2/docs/: assertions.md  benchmarks.md  migrate-v2-to-v3.md  release-notes.md
test/catch2/extras/: catch_amalgamated.cpp
test/testData/: bird.tif  bird256.tif  bird256bw.tif  bird256bwnoisy.tif  bird256bwnoisy_wienerfiltered.tif  crossCorrTest.tif  knownErrorsNPPaffine.tif  knownErrorsNPPaffineBack.tif  knownErrorsNPPperspective.tif  knownErrorsNPPperspectiveBack.tif  knownErrorsNPProt30.tif  lut3d.tif  maskAllSizes.tif  mask_four_squares.tif  mask_random_0.5.tif  morph.tif  template.tif
test/tests/: CMakeLists.txt  test_Image.cpp
test/tests/common/: CMakeLists.txt  test_bfloat16.cpp  test_bfloat16_cuda.cpp  test_bfloat16_kernel.cu  test_complex.cpp  test_halffp16.cpp  test_halffp16_cuda.cpp  test_halffp16_kernel.cu  test_safeCast.cpp  test_scratchBuffer.cpp  test_tupel.cpp  test_typecast.cpp  test_typecast_cuda.cpp  test_typecast_kernel.cu  test_utilities.cpp  test_vector1.cpp  test_vector1_cuda.cpp  test_vector1_kernel.cu  test_vector2.cpp  test_vector2_cuda.cpp  test_vector2_kernel.cu  test_vector3.cpp  test_vector3_cuda.cpp  test_vector3_kernel.cu  test_vector4.cpp  test_vector4A.cpp  test_vector4A_cuda.cpp  test_vector4A_kernel.cu  test_vector4_cuda.cpp  test_vector4_kernel.cu
(+3434 files in other folders)
